发布开源版本，并添加新模块功能